@startuml
'title
title "As a User, I want to get the list (title, author, type \nand ISBN/ISSN) of publications in my library" CD

'==== basic style ====
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ActivationBackgroundColor black
skinparam classAttributeIconSize 0

top to bottom direction

class ListOfItemsInMyLibraryUI {
}

package "controller" {

    class ListOfItemsInMyLibraryController {
      + getListOfItemInfoInMyLibrary(userId : UserId) : List<ItemDetailsDTO>
    }

}

package "domain" {

package "repository" {

    interface ILibraryRepo <<Interface>> {
    }
    interface IItemRepo <<Interface>>
    interface IEditionRepo <<Interface>>
    interface IPublicationRepo <<Interface>>
    interface IPublicationTypeRepo <<Interface>>
    interface IAuthorRepo <<Interface>>

}

package "valueobject" {

    class UserId <<Value Object>>
    class LibraryId <<Value Object>>
    class ItemId <<Value Object>>
    class EditionId <<Value Object>>
    class PublicationId <<Value Object>>
    class PublicationTypeId <<Value Object>>
    class AuthorId <<Value Object>>

}

package "library" #b0c4d4 {

    class Library <<Root>> <<Entity>> {
    }

}

package "item" #b0c4d4 {

    class Item <<Root>> <<Entity>> {
      +getEditionId() : EditionId
    }

}

package "edition" #b0c4d4 {

    class Edition <<Root>> <<Entity>> {
      +getPublicationId() : PublicationId
      +getPublicationTypeId() : PublicationTypeId
    }

}

package "publication" #b0c4d4 {

    class Publication <<Root>> <<Entity>> {
      +getAuthorId() : AuthorId
    }

}

package "publicationtype" #b0c4d4 {

    class PublicationType <<Root>> <<Entity>> {
    }

}

package "author" #b0c4d4 {

    class Author <<Root>> <<Entity>> {
    }

}

}

package "dto" {

    class ItemDetailsDTO {
    }

}

package "mapper" {

    class ItemDetailsMapper {
      +toDTO(edition : Edition, publication : Publication, publicationType : PublicationType, author : Author) : ItemDetailsDTO
    }

}

'package "persistence" {
'
'    package "mem" {
'
'        class MemoLibraryRepo
'        class MemoItemRepo
'        class MemoEditionRepo
'        class MemoPublicationRepo
'        class MemoPublicationTypeRepo
'        class MemoAuthorRepo
'
'    }
'
'}

package "ddd" {

    interface IRepository<ID, T> <<Interface>> {
        findAll() : Iterable<T>
        ofIdentity(id: ID) : Optional<T>
        containsOfIdentity(id : ID) : boolean
    }

}


ListOfItemsInMyLibraryUI "1" ..> "1" ListOfItemsInMyLibraryController : invokes

ListOfItemsInMyLibraryController ..> ILibraryRepo : calls
ListOfItemsInMyLibraryController ..> IItemRepo : calls
ListOfItemsInMyLibraryController ..> IEditionRepo : calls
ListOfItemsInMyLibraryController ..> IPublicationRepo : calls
ListOfItemsInMyLibraryController ..> IPublicationTypeRepo : calls
ListOfItemsInMyLibraryController ..> IAuthorRepo : calls

ListOfItemsInMyLibraryController ..> UserId : <<use>>

ListOfItemsInMyLibraryController .> ItemDetailsMapper : <<use>>

ListOfItemsInMyLibraryController "1" --> "*" ItemDetailsDTO : receives

Library "1" o-- "*" ItemId : aggregates
Library "1" --> "1" LibraryId : has
Item "1" --> "1" EditionId : references
Edition "1" --> "1" PublicationId : references
Edition "1" --> "1" PublicationTypeId : references
Edition "1" --> "1" EditionId : has
Publication "1" --> "1" AuthorId : references
PublicationType "1" --> "1" PublicationTypeId : has
Author "1" --> "1" AuthorId : has

ILibraryRepo -|> IRepository
IItemRepo -|> IRepository
IEditionRepo -|> IRepository
IPublicationRepo -|> IRepository
IPublicationTypeRepo -|> IRepository
IAuthorRepo -|> IRepository

ILibraryRepo "1" --> "*" Library : manages
IItemRepo "1" --> "*" Item : manages
IEditionRepo "1" --> "*" Edition : manages
IPublicationRepo "1" --> "*" Publication : manages
IPublicationTypeRepo "1" --> "*" PublicationType : manages
IAuthorRepo "1" --> "*" Author : manages

'MemoLibraryRepo ....|> ILibraryRepo
'MemoItemRepo ....|> IItemRepo
'MemoEditionRepo ....|> IEditionRepo
'MemoPublicationRepo ....|> IPublicationRepo
'MemoPublicationTypeRepo ....|> IPublicationTypeRepo
'MemoAuthorRepo ....|> IAuthorRepo

ItemDetailsMapper ...> ItemDetailsDTO : <<creates>>
ItemDetailsMapper ...> Edition : <<use>>
ItemDetailsMapper ..> Publication : <<use>>
ItemDetailsMapper ..> PublicationType : <<use>>
ItemDetailsMapper ..> Author : <<use>>

@enduml